# Limit-Order-Book

./: .gitignore  BST.cpp  Book.cpp  Book.hpp  CMakeLists.txt  GenerateOrders.cpp  GenerateOrders.hpp  LICENSE  Limit.cpp  Limit.hpp  Order.cpp  Order.hpp  OrderPipeline.cpp  OrderPipeline.hpp  README.md  avl_tree.cpp  data_visualisation.py  doubly_linked_list.cpp  initialOrders.txt  main.cpp  stuff.py
Generate_Orders/: GenerateOrders.cpp  initialOrders.txt
Limit_Order_Book/: Limit.cpp  Order.cpp
Process_Orders/: OrderPipeline.cpp  data_visualisation.py
test/: CMakeLists.txt  ExampleOrdersTests.cpp  LimitOrderBookTests.cpp
